log
Tue 22 Aug 2023 10:50:26 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   34 |   if (newList == NULL);
      |   ^~
list.c:35:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   35 |   {
      |   ^
cc1: all warnings being treated as errors
Compilation failed
18b144e
Tue 22 Aug 2023 10:50:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ce62635
Tue 22 Aug 2023 11:07:31 PM UTC: 
 list.c | 44 +++++++++++++++++++++++---------------------
 1 file changed, 23 insertions(+), 21 deletions(-)
 tests:  5|4
total_score: 25/70
d7d7c02
